force-app/main/default/objects/Quote_Coverage_Link__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Quote Coverage Links</relationshipLabel>
    <relationshipName>Quote_Coverage_Links</relationshipName>
    <type>Lookup</type>
</CustomField>