force-app/main/default/objects/Quote_Coverage_Link__c/fields/Policy_Stage__c.field-meta.xml
<CustomField>
    <fullName>Policy_Stage__c</fullName>
    <formula>TEXT(Policy__r.Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Stage</label>
    <type>Text</type>
</CustomField>