force-app/main/default/objects/Quote_Coverage_Link__c/fields/Policy_Text__c.field-meta.xml
<CustomField>
    <fullName>Policy_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Primary policy number.</inlineHelpText>
    <label>Policy #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>