force-app/main/default/objects/Quote_Coverage_Link__c/fields/Policy_Underlying__c.field-meta.xml
<CustomField>
    <fullName>Policy_Underlying__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>First excess policy number, if applicable.</inlineHelpText>
    <label>Policy # (Underlying)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>