force-app/main/default/objects/Quote_Coverage_Link__c/fields/Primary_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Carrier_Name__c</fullName>
    <description>For Scale Excess</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Excess D&amp;O Primary Carrier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>