force-app/main/default/objects/Quote_Coverage_Link__c/fields/Primary_Premium1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Premium1__c</fullName>
    <label>Primary Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>