force-app/main/default/objects/Quote_Coverage_Link__c/fields/Primary_Retention__c.field-meta.xml
<CustomField>
    <fullName>Primary_Retention__c</fullName>
    <label>Primary Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>