force-app/main/default/objects/Quote_Coverage_Link__c/fields/Products_and_completed_Operations__c.field-meta.xml
<CustomField>
    <fullName>Products_and_completed_Operations__c</fullName>
    <label>Products and Completed Operations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>