force-app/main/default/objects/Quote_Coverage_Link__c/fields/Products_Withdrawal_Limit_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Products_Withdrawal_Limit_Deductible__c</fullName>
    <label>Products Withdrawal Limit/Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>