force-app/main/default/objects/Quote_Coverage_Link__c/fields/Property_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Property_Deductible__c</fullName>
    <label>Comprehensive Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>