force-app/main/default/objects/Quote_Coverage_Link__c/fields/Property_Total_Insured_Value__c.field-meta.xml
<CustomField>
    <fullName>Property_Total_Insured_Value__c</fullName>
    <label>Property Total Insured Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>