force-app/main/default/objects/Quote_Coverage_Link__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote Coverage Links</relationshipLabel>
    <relationshipName>Quote_Coverage_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>