force-app/main/default/objects/Quote_Coverage_Link__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Set by description of busines</inlineHelpText>
    <label>Rate</label>
    <length>150</length>
    <type>Text</type>
</CustomField>