force-app/main/default/objects/Quote_Coverage_Link__c/fields/Rating_Basis__c.field-meta.xml
<CustomField>
    <fullName>Rating_Basis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value that most closely represents risk</inlineHelpText>
    <label>Rating Basis</label>
    <length>150</length>
    <type>Text</type>
</CustomField>