force-app/main/default/objects/Quote_Coverage_Link__c/fields/Reason_for_Aceptance__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Aceptance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Aceptance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>