force-app/main/default/objects/Quote_Coverage_Link__c/fields/Renovations_and_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Renovations_and_Improvements__c</fullName>
    <label>Renovations and Improvements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>