force-app/main/default/objects/Quote_Coverage_Link__c/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <description>Used for Scale Reporting Process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reported Date</label>
    <type>Date</type>
</CustomField>