force-app/main/default/objects/Quote_Coverage_Link__c/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <inlineHelpText>Primary policy&apos;s retention per claim</inlineHelpText>
    <label>Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>