force-app/main/default/objects/Quote_Coverage_Link__c/fields/Retention_Downtime_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Retention_Downtime_Coverage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retention (Downtime Coverage)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>