force-app/main/default/objects/Quote_Coverage_Link__c/fields/Scale_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Scale_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quote Coverage Links (Opportunity)</relationshipLabel>
    <relationshipName>Quote_Coverage_Links1</relationshipName>
    <type>Lookup</type>
</CustomField>