force-app/main/default/objects/Quote_Coverage_Link__c/fields/Soft_Costs__c.field-meta.xml
<CustomField>
    <fullName>Soft_Costs__c</fullName>
    <label>Soft Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>