force-app/main/default/objects/Quote_Coverage_Link__c/fields/Surplus_Line_Quote__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Line_Quote__c</fullName>
    <formula>Quote__r.Surplus_Lines_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surplus Line Quote</label>
    <type>Checkbox</type>
</CustomField>