force-app/main/default/objects/Quote_Coverage_Link__c/fields/Total_Sum_of_Underlying_Limits__c.field-meta.xml
<CustomField>
    <fullName>Total_Sum_of_Underlying_Limits__c</fullName>
    <label>Total Sum of Underlying Limits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>