force-app/main/default/objects/Quote_Coverage_Link__c/fields/Underlying_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Underlying_Aggregate__c</fullName>
    <inlineHelpText>First excess attachment point, if applicable.</inlineHelpText>
    <label>Aggregate (Underlying)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>