force-app/main/default/objects/Quote_Coverage_Link__c/fields/Underlying_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Underlying_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>First excess carrier name, if applicable.</inlineHelpText>
    <label>Carrier (Underlying)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>