force-app/main/default/objects/Quote_Coverage_Link__c/fields/Underlying_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Underlying_Occurrence__c</fullName>
    <inlineHelpText>First excess policy limit, if applicable.</inlineHelpText>
    <label>Occurrence (Underlying)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>