force-app/main/default/objects/Quote_Coverage_Link__c/fields/Underlying_Retention__c.field-meta.xml
<CustomField>
    <fullName>Underlying_Retention__c</fullName>
    <label>Retention (Underlying)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>