force-app/main/default/objects/Quote_Coverage_Link__c/fields/Uninsured_Motorist__c.field-meta.xml
<CustomField>
    <fullName>Uninsured_Motorist__c</fullName>
    <description>removed so we can add a currency field option</description>
    <label>Uninsured Motorist</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>