force-app/main/default/objects/Quote_Coverage_Link__c/fields/Uninsured_Motorist_new__c.field-meta.xml
<CustomField>
    <fullName>Uninsured_Motorist_new__c</fullName>
    <label>Uninsured Motorist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>