force-app/main/default/objects/Quote_Coverage_Link__c/fields/Vision__c.field-meta.xml
<CustomField>
    <fullName>Vision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vision</label>
    <type>Checkbox</type>
</CustomField>