force-app/main/default/objects/Quote_Coverage_Link__c/fields/Weekly_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Benefit__c</fullName>
    <label>Weekly Benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>